<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.marketdata.sfmcdemo.view.fragment.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/identityFragment"
        android:name="com.marketdata.sfmcdemo.view.fragment.IdentityFragment"
        android:label="@string/nav_identity" />

    <fragment
        android:id="@+id/pushFragment"
        android:name="com.marketdata.sfmcdemo.view.fragment.PushFragment"
        android:label="@string/nav_push" />

    <fragment
        android:id="@+id/attributesFragment"
        android:name="com.marketdata.sfmcdemo.view.fragment.AttributesFragment"
        android:label="@string/nav_attributes" />

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.marketdata.sfmcdemo.view.fragment.AnalyticsFragment"
        android:label="@string/nav_analytics" />

</navigation>
